fix overflow on mobile

--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -1,6 +1,7 @@
 .App,
 .App-header,
 main {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,6 +21,7 @@ main {
 
 .grid {
   flex-grow: 1;
+  width: 100%;
   max-width: 1200px;
   margin-top: 10vh;
   padding: 20px;
